--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -110,8 +110,7 @@ a {
             height: 90%;
             display: flex;
             align-items: center;
-            position: relative;
-            top: 10px;
+            bottom: 10px;
           }
         }
       }
