--- a/src/assets/scss/PortfolioPage.module.scss
+++ b/src/assets/scss/PortfolioPage.module.scss
@@ -8,23 +8,35 @@
   gap: 3rem;
 
   .container {
-    display: flex;
-    // justify-content: center;
-    gap: 2rem;
-    height: 100%;
     width: 100%;
+    height: 100%;
     overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    box-sizing: border-box;
+
+    & > div {
+      display: flex;
+      // justify-content: center;
+      gap: 2rem;
+      height: 100%;
+      width: 100%;
+    }
   }
 }
 
 .dark {
   .container {
-    & > a {
-      background-color: $purple;
-      filter: drop-shadow(0 0 1rem $dark-shadow);
+    & > div {
+      & > a {
+        background-color: $purple;
+        filter: drop-shadow(0 0 1rem $dark-shadow);
 
-      h2 {
-        color: $blue-gray;
+        h2 {
+          color: $blue-gray;
+        }
       }
     }
   }
@@ -36,7 +48,10 @@
     gap: 1rem;
 
     .container {
-      height: 80%;
+      box-sizing: unset;
+      & > div {
+        height: 80%;
+      }
     }
   }
 }
@@ -46,16 +61,21 @@
     gap: 2rem;
 
     .container {
-      gap: 1rem;
-      height: 100%;
-      flex-direction: column;
-      justify-content: flex-start;
+      align-items: unset;
+      padding: 2rem;
+
+      & > div {
+        gap: 1rem;
+        height: fit-content;
+        flex-direction: column;
+        justify-content: flex-start;
+      }
     }
   }
 }
 
 @media screen and (max-width: 576px) {
   .wrapper {
-    padding: 2rem 1.5rem;
+    padding: 1.5rem;
   }
 }
